# FreeEQ8

./: .gitattributes  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build_macos.sh  build_windows.ps1
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Biquad.h  EQBand.h
